--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -269,6 +269,12 @@
         font-size: 2.4rem;
       }
 
+      @media only screen and (max-width: $bp-smallest) {
+        display: flex;
+        flex-direction: column;
+        padding-bottom: 1rem;
+      }
+
       &-title {
         font-size: 3.2rem;
 
@@ -294,6 +300,10 @@
 
         @media only screen and (max-width: $bp-medium) {
           font-size: 1.8rem;
+        }
+
+        @media only screen and (max-width: $bp-smallest) {
+          display: none;
         }
       }
 
